<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telaCadastro">

    <EditText
        android:id="@+id/senhaID2"
        android:layout_width="221dp"
        android:layout_height="40dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72"
        tools:targetApi="o" />

    <Button
        android:id="@+id/CADASTRARID"
        android:layout_width="243dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="92dp"
        android:background="@color/colorPrimary"
        android:onClick="cadastrarUsuario"
        android:text="@string/cadastrar"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailCadId"
        app:layout_constraintVertical_bias="0.875" />

    <TextView
        android:id="@+id/nameID2"
        android:layout_width="116dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="420dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/app_nome"
        android:textAllCaps="false"
        android:textSize="36sp"
        android:typeface="normal"
        app:fontFamily="casual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoID2"
        app:layout_constraintVertical_bias="0.26" />

    <ImageView
        android:id="@+id/logoID2"
        android:layout_width="111dp"
        android:layout_height="110dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/logoDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <Button
        android:id="@+id/buttonBackID2"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="51dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/actionModeCloseDrawable"
        android:onClick="retornaTela"
        android:textColor="#81C0BABA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <EditText
        android:id="@+id/dateCadID"
        android:layout_width="221dp"
        android:layout_height="40dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/data_de_nascimento"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.754"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameID2"
        app:layout_constraintVertical_bias="0.34"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/userCadID"
        android:layout_width="221dp"
        android:layout_height="40dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/usu_rio"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.754"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameID2"
        app:layout_constraintVertical_bias="0.233"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/nomeCadID"
        android:layout_width="221dp"
        android:layout_height="40dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameID2"
        app:layout_constraintVertical_bias="0.121"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/emailCadId"
        android:layout_width="221dp"
        android:layout_height="40dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameID2"
        app:layout_constraintVertical_bias="0.441"
        tools:targetApi="o" />

</androidx.constraintlayout.widget.ConstraintLayout>